# SampleApp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  copilot-setup-steps.yml  eslint.config.js  jest.config.js  package-lock.json  package.json  test-secret.txt  tsconfig.json
.github/: copilot-instructions.md
.github/agents/: frontend-agent.md  testing-agent.md
.github/prompts/: code-review.prompt.md  create-user-story.prompt.md
.github/workflows/: AGENTIC-WORKFLOWS.md  chaos-engineering.lock.yml  chaos-engineering.md  ci-cd.yml  continuous-docs.lock.yml  continuous-docs.md  continuous-testing.lock.yml  continuous-testing.md  continuous-triage.lock.yml  continuous-triage.md  dependency-update.lock.yml  dependency-update.md  incident-response.lock.yml  incident-response.md  release-notes.lock.yml  release-notes.md  security-audit.md
cpp-app/: CMakeLists.txt  README.md
cpp-app/.github/: copilot-instructions.md
cpp-app/src/: main.cpp  task.cpp  task.h  task_manager.cpp  task_manager.h
cpp-app/tests/: CMakeLists.txt  test_task_manager.cpp
demos/agentic-devops/: README.md  cheat-sheet.md  demo-prompts.md
dotnet-app/: DotnetApp.csproj  DotnetApp.sln  Program.cs  README.md
dotnet-app/.github/: copilot-instructions.md
dotnet-app/Controllers/: TasksController.cs
dotnet-app/Data/: AppDbContext.cs
dotnet-app/Models/: TaskItem.cs
dotnet-app/Tests/: TasksControllerTests.cs  Tests.csproj
java-app/: README.md  pom.xml
java-app/.github/: copilot-instructions.md
nextjs-app/: .gitignore  README.md  package.json  tsconfig.json
nextjs-app/.github/: copilot-instructions.md
python-app/: README.md  app.db  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
python-app/.github/: copilot-instructions.md
python-app/tests/: conftest.py  test_main.py
scripts/: provision-azure.sh
src/: index.ts
src/middleware/: auth.ts  validation.ts
src/models/: task.ts  team.ts
src/routes/: dashboard.test.ts  dashboard.ts  tasks.test.ts  tasks.ts  teams.test.ts  teams.ts
src/tests/: factories.ts
src/utils/: database.test.ts  database.ts  logger.ts  response.ts
sre/: README.md  azure.yaml
(+28 files in other folders)
